<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>

    <string name="post_content_hint">What\'s new?</string>
    <string name="post_save">Save</string>
    <string name="post_cancel">Cancel</string>
    <string name="post_edit">Edit</string>
    <string name="post_delete">Delete</string>
    <string name="post_add">Add post</string>
    <string name="post_cancel_button">Cancel</string>
    <string name="post_delete_confirm">Delete</string>
    <string name="post_delete_message">Are you sure you want to delete this post?</string>
    <string name="post_delete_title">Delete post</string>
    <string name="post_edit_title">Edit post</string>
    <string name="post_new_title">New post</string>
    <string name="post_menu_title">Post actions</string>
    <string name="post_like">Like</string>
    <string name="post_share">Share</string>
    <string name="post_views">Views</string>
    <string name="new_post">New Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="content_hint">Enter text...</string>
    <string name="video_url_hint">Video link (RUTUBE)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_empty_content">Empty content</string>
    <string name="video_preview">Video</string>
    <string name="play">Play</string>
</resources>